Fixed css wrapping styles onto menu items.

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -779,7 +779,7 @@ pre.tab-json .json-example-highlight {
   }
 }
 
-.index span.versionwrap, .changelog span.versionwrap {
+.index .page-wrapper span.versionwrap, .changelog .page-wrapper span.versionwrap {
   background: $nav-active-parent-bg;
   border-radius: 5px;
   color: #fff;
